@@ -224,3 +224,91 @@ def test_qualified_attribute():
     node = etree.Element('document')
     address_type.render(node, obj)
     assert_nodes_equal(expected, node)
+
+
+def test_group():
+    schema = xsd.Schema(load_xml("""
+        <?xml version="1.0"?>
+        <xsd:schema
+                xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                xmlns:tns="http://tests.python-zeep.org/"
+                attributeFormDefault="qualified"
+                elementFormDefault="qualified"
+                targetNamespace="http://tests.python-zeep.org/">
+
+          <xsd:attributeGroup name="groepje">
+            <xsd:attribute name="id" type="xsd:string" use="required" form="unqualified" />
+            <xsd:attribute name="pos" type="xsd:string" use="required" />
+          </xsd:attributeGroup>
+          <xsd:element name="Address">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="foo" type="xsd:string" form="unqualified" />
+              </xsd:sequence>
+              <xsd:attributeGroup ref="tns:groepje"/>
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:schema>
+    """))
+
+    address_type = schema.get_element('{http://tests.python-zeep.org/}Address')
+    obj = address_type(foo='bar', id="20", pos="30")
+
+    expected = """
+      <document>
+        <ns0:Address xmlns:ns0="http://tests.python-zeep.org/" id="20" ns0:pos="30">
+          <foo>bar</foo>
+        </ns0:Address>
+      </document>
+    """
+
+    node = etree.Element('document')
+    address_type.render(node, obj)
+    assert_nodes_equal(expected, node)
+
+
+def test_group_nested():
+    schema = xsd.Schema(load_xml("""
+        <?xml version="1.0"?>
+        <xsd:schema
+                xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                xmlns:tns="http://tests.python-zeep.org/"
+                attributeFormDefault="qualified"
+                elementFormDefault="qualified"
+                targetNamespace="http://tests.python-zeep.org/">
+
+          <xsd:attributeGroup name="groepje">
+            <xsd:attribute name="id" type="xsd:string" use="required" form="unqualified" />
+            <xsd:attribute name="pos" type="xsd:string" use="required" />
+            <xsd:attributeGroup ref="tns:nestje"/>
+          </xsd:attributeGroup>
+
+          <xsd:attributeGroup name="nestje">
+            <xsd:attribute name="size" type="xsd:string" use="required" />
+          </xsd:attributeGroup>
+
+          <xsd:element name="Address">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="foo" type="xsd:string" form="unqualified" />
+              </xsd:sequence>
+              <xsd:attributeGroup ref="tns:groepje"/>
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:schema>
+    """))
+
+    address_type = schema.get_element('{http://tests.python-zeep.org/}Address')
+    obj = address_type(foo='bar', id="20", pos="30", size="maat")
+
+    expected = """
+      <document>
+        <ns0:Address xmlns:ns0="http://tests.python-zeep.org/" id="20" ns0:pos="30" ns0:size="maat">
+          <foo>bar</foo>
+        </ns0:Address>
+      </document>
+    """
+
+    node = etree.Element('document')
+    address_type.render(node, obj)
+    assert_nodes_equal(expected, node)
