@@ -4,6 +4,7 @@
    While this is not correct according to the (messy) soap specifications, it
    does make zeep more compatible with all the invalid wsdl documents out
    there. (#159)
+ - Implement support for attributeGroup (#160)
 
 
 0.14.0 (2016-08-03)
